force-app/main/default/objects/Lead_Assignment_Config_NXDS__mdt/Lead_Assignment_Config_NXDS__mdt.object-meta.xml
<CustomObject>
    <label>Lead Assignment Config NXDS</label>
    <pluralLabel>Lead Assignment Configs NXDS</pluralLabel>
</CustomObject>