force-app/main/default/objects/Lead_Assignment_Config_NXDS__mdt/fields/Lead_Status__c.field-meta.xml
<CustomField>
    <fullName>Lead_Status__c</fullName>
    <label>Lead Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>