force-app/main/default/objects/Lead_Assignment_Config_NXDS__mdt/fields/Pre_Deal_Status__c.field-meta.xml
<CustomField>
    <fullName>Pre_Deal_Status__c</fullName>
    <label>Pre Deal Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>