force-app/main/default/objects/Lead_Assignment_Config_NXDS__mdt/fields/Round_Robin_Type__c.field-meta.xml
<CustomField>
    <fullName>Round_Robin_Type__c</fullName>
    <label>Round Robin Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>